nxMyDB v0.3.0 (not released):
  NEW: Added configuration option "Log_Level" to control the log verbosity.
  NEW: Group rename operations are now implemented.
  NEW: Logging system to log errors, warnings, and information to a dedicated log file.
  NEW: Spin-lock based locking implemented using stored procedures, reduces failed locks.
  CHG: Renamed configuration option "SyncFirst" to "Sync_First".
  CHG: Renamed configuration option "SyncInterval" to "Sync_Interval".
  CHG: Requires MySQL Server v5.0.19, or newer.
  FIX: All user's admingroups, groups and hosts were inserted with null-padding to the database.
  FIX: User rename operations failed during sync, since the new name was not present in the changes table.

nxMyDB v0.2.0 (Sep 25, 2007):
  NEW: Event handler for catching server start and stop events.
  NEW: Full user and group synchronization during start-up.
  NEW: Incremental user and group synchronization performed on configurable intervals.
  NEW: Three new configuration options: Sync, SyncFirst, and SyncInterval.
  NEW: Two new tables for keeping track of changes made to users and groups.
  CHG: Removed the "Refresh" configuration option, see the new sync options.
  CHG: Renamed io_users and io_group tables to io_user and io_group, respectively.
  CHG: The "updated" column will only be set on writes.
  FIX: Corrected a few possible memory leaks in failure scenarios.

nxMyDB v0.1.0 (Sep 8, 2007):
  CHG: Initial release.