@@ -8,6 +8,7 @@ nxMyDB v0.3.0 (not released):
   CHG: Requires MySQL Server v5.0.19, or newer.
   FIX: All user's admingroups, groups and hosts were inserted with null-padding to the database.
   FIX: User rename operations failed during sync, since the new name was not present in the changes table.
+  FIX: Work around a bug in ioFTPD that leads to memory corruption if a module open call returns UM_ERROR/GM_ERROR.
 
 nxMyDB v0.2.0 (Sep 25, 2007):
   NEW: Event handler for catching server start and stop events.
